pay on delivery added and collapse close fixed

--- a/styles/Payment.scss
+++ b/styles/Payment.scss
@@ -41,10 +41,22 @@
                 .payment__card__container {
                     padding: 7px 13px;
                     border-radius: 3px;
+                    margin-bottom: 17px;
+
+                    &:last-child{
+                        margin-bottom: 0;
+                    }
 
                     &.active {
                         background-color: #fcf5ee;
                         border: 1px solid #fbd8b4;
+                    }
+
+                    .payment__guidelines {
+                        display: flex;
+                        margin-top: 11px;
+                        margin-bottom: 16px;
+                        font-size: 14px;
                     }
                 }
 
@@ -67,13 +79,6 @@
 
                     label {
                         flex: auto;
-                    }
-
-                    .payment__debit__guidelines {
-                        display: flex;
-                        margin-top: 11px;
-                        margin-bottom: 16px;
-                        font-size: 14px;
                     }
 
                     .payment__debit__cardImg {
